--- a/global.css
+++ b/global.css
@@ -11,7 +11,8 @@
 }
 
 /* Ensure proper font sizing */
-html, body {
+html,
+body {
   font-size: 16px;
   line-height: 1.5;
 }
@@ -24,3 +25,4 @@ html, body {
 .flex-1 {
   flex: 1 1 0%;
 }
+
