--- a/global.css
+++ b/global.css
@@ -1,4 +1,6 @@
 /* global.css */
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Rubik+Glitch&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
